frontend/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: team16
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - env:
        - name: AUTH_API_ADDRESS
          valueFrom:
            configMapKeyRef:
              name: frontend
              key: AUTH_API_ADDRESS
        - name: PORT
          valueFrom:
            configMapKeyRef:
              name: frontend
              key: PORT
        - name: TODOS_API_ADDRESS
          valueFrom:
            configMapKeyRef:
              name: frontend
              key: TODOS_API_ADDRESS
        name: frontend
        image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team16-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      restartPolicy: Always
