frontend/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: team16
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend
